<resources>
    <!--App Strings-->
    <string name="app_name">ESGT App</string>
    <string name="action_settings">Settings</string>

    <!-- Google Login Activity -->
    <string name="title_text">Google Sign-In</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Activity Names and Descriptions -->
    <string name="google_auth_activity_desc">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="google_auth_activity_name">GoogleAuthActivity</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">577511514187-15srkmag7k49er0ho8lh9lrahni9gud1.apps.googleusercontent.com</string>


    <!-- =========== -->
    <!-- URL Strings -->
    <!-- =========== -->
    <string name="url_config">http://esgt.ddns.net:8000/config</string>
    <string name="url_google_auth">http://esgt.ddns.net:8000/googleauth</string>>

    <!-- =========================== -->
    <!--       Settings Strings      -->
    <!-- =========================== -->

    <string name="title_activity_settings">Settings</string>

    <!--============-->
    <!--   General  -->
    <!--============-->
    <string name="pref_general_category_title">General</string>
    <string name="pref_general_category_key">category_general</string>

    <!--User Name-->
    <string name="pref_username_key">username</string>
    <string name="pref_username_title">Username</string>

    <!--Display Name-->
    <string name="pref_display_name_key">display_name</string>
    <string name="pref_display_name_title">Display Name</string>
    <string name="pref_display_name_default">John Smith</string>

    <!--Time Zone-->
    <string name="pref_time_zone_key">time_zone</string>
    <string name="pref_time_zone_title">Time Zone</string>
    <string-array name="pref_time_zone_entries">
        <!--TODO: Add more-->
        <item>EDT</item>
        <item>EST</item>
        <item>CST</item>
        <item>MST</item>
        <item>PST</item>
    </string-array>
    <string-array name="pref_time_zone_values"> <!-- Offset from UTC -->
        <item>-4</item>
        <item>-5</item>
        <item>-6</item>
        <item>-7</item>
        <item>-8</item>
    </string-array>

    <!--Location (weather)-->
    <string name="pref_weather_location_key">weather_location</string>
    <string name="pref_weather_location_title">Weather Location</string>
    <string-array name="pref_weather_location_entries">
        <!--TODO: Add more, uses city list json from Open Weather Map-->
        <item>New York City</item>
        <item>Atlanta</item>
        <item>Tokyo</item>
        <item>Taipei</item>
        <item>Mumbai</item>
    </string-array>
    <string-array name="pref_weather_location_values">
        <item>5128581</item>
        <item>4180439</item>
        <item>1850147</item>
        <item>1668341</item>
        <item>1275339</item>
    </string-array>

    <!--Temperature Units-->
    <string name="pref_use_imperial_key">use_imperial</string>
    <string name="pref_use_imperial_title">Use Imperial Units</string>
    <string name="pref_use_imperial_on">Use Fahrenheit</string>
    <string name="pref_use_imperial_off">Use Celcius</string>

    <!--News Source-->
    <string name="pref_news_source_key">news_source</string>
    <string name="pref_news_source_title">News Sources</string>
    <string-array name="pref_news_source_entries" >
        <item>ABC</item>
        <item>Ars Technica</item>
        <item>AP</item>
        <item>BBC News</item>
        <item>BBC Sport</item>
        <item>Bild</item>
        <item>Bloomberg</item>
        <item>Business Insider</item>
        <item>Business Insider UK</item>
        <item>BuzzFeed</item>
        <item>CNBC</item>
        <item>CNN</item>
        <item>Daily Mail</item>
        <item>Der Tagesspiegel</item>
        <item>Die Zeit</item>
        <item>Engadget</item>
        <item>Entertainment Weekly</item>
        <item>ESPN</item>
        <item>ESPN Cricinfo</item>
        <item>Financial Times</item>
        <item>Focus</item>
        <item>Football Italia</item>
        <item>Fortune</item>
        <item>Four Four Two</item>
        <item>Fox Sports</item>
        <item>Google News</item>
        <item>Gruenderszene</item>
        <item>Hacker News</item>
        <item>Handelsblatt</item>
        <item>IGN</item>
        <item>Independent</item>
        <item>Mashable</item>
        <item>Metro</item>
        <item>Mirror</item>
        <item>MTV News</item>
        <item>MTV News UK</item>
        <item>National Geographic</item>
        <item>New Scientist</item>
        <item>Newsweek</item>
        <item>New York</item>
        <item>NFL</item>
        <item>Polygon</item>
        <item>Recode</item>
        <item>Reddit</item>
        <item>Reuters</item>
        <item>Sky News</item>
        <item>Sky Sports News</item>
        <item>Spiegel Online</item>
        <item>t3n</item>
        <item>talkSPORT</item>
        <item>TechCrunch</item>
        <item>TechRadar</item>
        <item>The Economist</item>
        <item>The Guardian</item>
        <item>The Guardian UK</item>
        <item>The Hindu</item>
        <item>The Huffington Post</item>
        <item>The LADbible</item>
        <item>The New York Times</item>
        <item>The New Next Web</item>
        <item>The Sport Bible</item>
        <item>The Telegraph</item>
        <item>The Times of India</item>
        <item>The Verge</item>
        <item>The Wall Street Journal</item>
        <item>The Washington Post</item>
        <item>Time</item>
        <item>USA Today</item>
        <item>Wired</item>
        <item>Wirtschafts Whoche</item>
    </string-array>
    <string-array name="pref_news_source_values" >
        <item>abc-news-au</item>
        <item>ars-technica</item>
        <item>associated-press</item>
        <item>bbc-news</item>
        <item>bbc-sport</item>
        <item>bild</item>
        <item>bloomberg</item>
        <item>business-insider</item>
        <item>business-insider-uk</item>
        <item>buzzfeed</item>
        <item>cnbc</item>
        <item>cnn</item>
        <item>daily-mail</item>
        <item>der-tagesspiegel</item>
        <item>die-zeit</item>
        <item>engadget</item>
        <item>entertainment-weekly</item>
        <item>espn</item>
        <item>espn-cric-info</item>
        <item>financial-times</item>
        <item>focus</item>
        <item>football-italia</item>
        <item>fortune</item>
        <item>four-four-two</item>
        <item>fox-sports</item>
        <item>google-news</item>
        <item>gruenderszene</item>
        <item>hacker-news</item>
        <item>handelsblatt</item>
        <item>ign</item>
        <item>independent</item>
        <item>mashable</item>
        <item>metro</item>
        <item>mirror</item>
        <item>mtv-news</item>
        <item>mtv-news-uk</item>
        <item>national-geographic</item>
        <item>new-scientist</item>
        <item>newsweek</item>
        <item>new-york-magazine</item>
        <item>nfl-news</item>
        <item>polygon</item>
        <item>recode</item>
        <item>reddit-r-all</item>
        <item>reuters</item>
        <item>sky-news</item>
        <item>sky-sports-news</item>
        <item>spiegel-online</item>
        <item>t3n</item>
        <item>talksport</item>
        <item>techcrunch</item>
        <item>techradar</item>
        <item>the-economist</item>
        <item>the-guardian-au</item>
        <item>the-guardian-uk</item>
        <item>the-hindu</item>
        <item>the-huffington-post</item>
        <item>the-lad-bible</item>
        <item>the-new-york-times</item>
        <item>the-next-web</item>
        <item>the-sport-bible</item>
        <item>the-telegraph</item>
        <item>the-times-of-india</item>
        <item>the-verge</item>
        <item>the-wall-street-journal</item>
        <item>the-washington-post</item>
        <item>time</item>
        <item>usa-today</item>
        <item>wired-de</item>
        <item>wirtschafts-woche</item>
    </string-array>

    <!--============-->
    <!-- Services   -->
    <!--============-->

    <string name="pref_services_category_title">Services</string>
    <string name="pref_services_category_key">category_services</string>

    <!--Google Login-->
    <string name="pref_google_login_key">google_login</string>
    <string name="pref_google_login_title">Google Login</string>
    <string name="intent_launch_google_login">intent_launch_google_login</string>

    <!--==============-->
    <!-- Data & Sync  -->
    <!--==============-->

    <string name="pref_data_sync_category_title">Data &amp; Sync</string>
    <string name="pref_data_sync_category_key">category_data_sync</string>

    <!--Sync Frequency-->
    <string name="pref_sync_frequency_title">Sync frequency</string>
    <string-array name="pref_sync_frequency_entries">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!--System Sync Settings-->
    <string name="pref_title_system_sync_settings">System sync settings</string>


    <!--====================-->
    <!--Notifications-->
    <!--====================-->

    <string name="pref_notifications_category_title">Notifications</string>
    <string name="pref_notifications_category_key">category_notifications</string>

    <!--New Message Notification-->
    <string name="pref_new_message_notifications_key">new_message_notifications</string>
    <string name="pref_new_message_notifications_title">New message notifications</string>

    <!--Ringtone-->
    <string name="pref_notification_ringtone_title">Ringtone</string>
    <string name="pref_notification_ringtone_key">notifications_new_message_ringtone</string>
    <string name="pref_notification_ringtone_silent">Silent</string>

    <!--Vibrate-->
    <string name="pref_notification_vibrate_title">Vibrate</string>
    <string name="pref_notification_vibrate_key">vibrate</string>

</resources>
