<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_general_category_title"
        android:key="@string/pref_general_category_key">
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <!--Display Name-->
        <EditTextPreference
            android:enabled="false"
            android:key="@string/pref_username_key"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_username_title" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_display_name_default"
            android:inputType="textCapWords"
            android:key="@string/pref_display_name_key"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_display_name_title" />

        <!--Time Zone-->
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_time_zone_entries"
            android:entryValues="@array/pref_time_zone_values"
            android:key="@string/pref_time_zone_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_time_zone_title" />


        <!--City (weather)-->
        <ListPreference
            android:entries="@array/pref_weather_location_entries"
            android:entryValues="@array/pref_weather_location_values"
            android:key="@string/pref_weather_location_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_weather_location_title" />

        <!--Temperature Scale -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_use_imperial_key"
            android:summaryOff="@string/pref_use_imperial_off"
            android:summaryOn="@string/pref_use_imperial_on"
            android:title="@string/pref_use_imperial_title" />

        <!--News Source -->
        <ListPreference
            android:entries="@array/pref_news_source_entries"
            android:entryValues="@array/pref_news_source_values"
            android:key="@string/pref_news_source_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_news_source_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_services_category_title"
        android:key="@string/pref_services_category_key">
        <!--Google Login-->
        <Preference
            android:title="@string/pref_google_login_title"
            android:key="@string/pref_google_login_key">
            <intent android:action="intent_launch_google_login"/>
        </Preference>
    </PreferenceCategory>

    <!--<PreferenceCategory-->
        <!--android:title="@string/pref_data_sync_category_title"-->
        <!--android:key="@string/pref_data_sync_category_key">-->
        <!--&lt;!&ndash;Sync Frequency&ndash;&gt;-->
        <!--<ListPreference-->
            <!--android:defaultValue="180"-->
            <!--android:entries="@array/pref_sync_frequency_entries"-->
            <!--android:entryValues="@array/pref_sync_frequency_values"-->
            <!--android:key="sync_frequency"-->
            <!--android:negativeButtonText="@null"-->
            <!--android:positiveButtonText="@null"-->
            <!--android:title="@string/pref_sync_frequency_title" />-->

        <!--&lt;!&ndash; This preference simply launches an intent when selected. Use this UI sparingly, per-->
             <!--design guidelines. &ndash;&gt;-->
        <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
            <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
        <!--</Preference>-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory-->
        <!--android:title="@string/pref_notifications_category_title"-->
        <!--android:key="@string/pref_notifications_category_key">-->

        <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/pref_new_message_notifications_key"-->
            <!--android:title="@string/pref_new_message_notifications_title" />-->

        <!--<RingtonePreference-->
            <!--android:defaultValue="content://settings/system/notification_sound"-->
            <!--android:dependency="@string/pref_new_message_notifications_key"-->
            <!--android:key="@string/pref_notification_ringtone_key"-->
            <!--android:ringtoneType="notification"-->
            <!--android:title="@string/pref_notification_ringtone_title" />-->

        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:dependency="@string/pref_new_message_notifications_key"-->
            <!--android:key="@string/pref_notification_vibrate_key"-->
            <!--android:title="@string/pref_notification_vibrate_title" />-->
    <!--</PreferenceCategory>-->
</PreferenceScreen>
